[package]
name = "poio"
version = "0.2.0"
edition = "2021"
authors = ["Bazil Suhail <Bscs22072>", "Abdullah Masood <Bscs22054>", "Ebad Junaid <Bscs22046>"]
description = "Proof of I/O (PoIO) — An ASIC-resistant consensus algorithm bounded by PCIe storage I/O latency"
readme = "README.md"

[[bin]]
name = "poio"
path = "src/main.rs"

[dependencies]
rand_chacha = "0.3.1"
rand_core   = "0.6.4"
blake3      = "1.5.1"
clap        = { version = "4.5", features = ["derive", "color"] }
indicatif   = "0.17"
colored     = "2.1"
rayon       = "1.10"
ctrlc       = "3.4"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
panic       = "abort"
strip       = true
