[package]
name = "poio"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_chacha = "0.3.1"
rand_core = "0.6.4"
blake3 = "1.5.1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
indicatif = "0.17"
chrono = "0.4"
